# phase_space_integration

./: .gitignore  README.md  setup.cfg
cpp/: CMakeLists.txt  README.md  phase_space.hpp  test_muon_decay.cpp  thermal_cross_section.cpp
python/: phase_space_jax.py  phase_space_numpy.py  thermal_cross_section.py
