[metadata]
name = phase-space
author = Logan Morrison
description = Project for integrating over phase space
license = MIT
classifiers = 
  Programming Language :: Python :: 3.6


[options]
zip_safe = False
python_requires = ">=3.6"
include_package_data = True
package_dir = 
  = jax
packages = find:
test_requires = "pytest"

[options.packages.find]
where = jax

[flake8]
max-line-length = 88
